--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,8 @@ body {
     margin: 0;
     font-family: Arial, sans-serif;
     line-height: 1.6;
-    background-color: #f4f4f4;
-    color: #333;
+    background-color: #000000;
+    color: #000000;
 }
 
 header {
@@ -33,16 +33,12 @@ header {
 
 .nav-list li a {
     display: block;
-    color: white;
+    color: hwb(0 100% 0%);
     text-decoration: none;
     padding: 10px 20px;
     border-radius: 5px;
     transition: background-color 0.3s ease-in-out;
 }
-
 .nav-list li a:hover {
-    background-color: #575757;
+    background-color: hsl(0, 0%, 100%);
 }
-profile.jpg {
-    margin: 20px; /* Adiciona um espaçamento ao redor da imagem */
-  }
